# Game-of-Life

./: .gitignore  CMakeLists.txt  Game-of-Life.sln  README.md
Game-of-Life/: CMakeLists.txt  Game-of-Life.cpp  Game-of-Life.vcxproj  Game-of-Life.vcxproj.filters  glad.c  imgui.ini
Game-of-Life/libs/glad/: glad.h
Game-of-Life/libs/imgui/backends/: imgui_impl_glfw.cpp
Game-of-Life/x64/Debug/: Game-of-Life.exe.recipe  vc143.idb
Game-of-Life/x64/Debug/Game-of-Life.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Game-of-Life.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
